--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
 
     <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/select_mode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/textPadding"
                 android:background="@color/colorPrimaryLight"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 android:textStyle="bold"
                 android:textColor="@color/colorPrimaryText"
                 android:text="@string/selectMode"
@@ -43,21 +43,24 @@
                             android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:src="@drawable/ringer_on"
-                            android:layout_alignParentStart="true" />
+                            android:layout_alignParentStart="true"
+                            android:contentDescription="@string/ringon" />
                         <ImageView
                             android:id="@+id/ringer_off"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:src="@drawable/ringer_off"
-                            android:layout_centerHorizontal="true" />
+                            android:layout_centerHorizontal="true"
+                            android:contentDescription="@string/silent" />
                         <ImageView
                             android:id="@+id/ringer_vibrate"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:foreground="?android:attr/selectableItemBackground"
                             android:src="@drawable/ringer_vibrate"
-                            android:layout_alignParentEnd="true" />
+                            android:layout_alignParentEnd="true"
+                            android:contentDescription="@string/vibrate" />
 
                     </RelativeLayout>
                 </android.support.v7.widget.CardView>
@@ -68,11 +71,11 @@
                     android:layout_width="match_parent"
                     android:padding="8dp"
                     android:background="@color/colorPrimaryLight"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textStyle="bold"
                     android:layout_below="@+id/card_view"
                     android:layout_marginTop="@dimen/marginTop"
-                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
                     android:textColor="@color/colorPrimaryText"
                     android:text="@string/selectLevel"
                     />
@@ -97,10 +100,10 @@
                             android:id="@+id/voice"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
-                            android:textSize="13dp"
+                            android:textSize="13sp"
                             android:textColor="@color/colorPrimaryText"
                             android:text="@string/voice"
-                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
                             android:layout_alignParentTop="true"
                             />
                         <SeekBar
@@ -117,10 +120,10 @@
                             android:id="@+id/music"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
-                            android:textSize="13dp"
+                            android:textSize="13sp"
                             android:textColor="@color/colorPrimaryText"
                             android:text="@string/music"
-                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
                             android:layout_below="@id/voiceControl"
                             />
                         <SeekBar
@@ -137,10 +140,10 @@
                                 android:id="@+id/ringer"
                                 android:layout_height="wrap_content"
                                 android:layout_width="wrap_content"
-                                android:textSize="13dp"
+                                android:textSize="13sp"
                                 android:textColor="@color/colorPrimaryText"
                                 android:text="@string/ringer"
-                                android:layout_alignParentLeft="true"
+                                android:layout_alignParentStart="true"
                                 android:layout_below="@id/musicControl"
                             />
                         <SeekBar
@@ -157,10 +160,10 @@
                             android:id="@+id/alarm"
                             android:layout_height="wrap_content"
                             android:layout_width="wrap_content"
-                            android:textSize="13dp"
+                            android:textSize="13sp"
                             android:textColor="@color/colorPrimaryText"
                             android:text="@string/alarm"
-                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
                             android:layout_below="@id/ringerControl"
                             />
                         <SeekBar
